--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cv</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/img/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+               </ul>
+            </nav>   
+        </div>             
+    </header>
+    <main class="main">
+        <div class="container main-container">
+            <section class="section section-profile" id="profile">
+                <img src="./assets/img/image.jpg" alt class="section-profile-logo">
+              <div class="section-profile-title">
+                  <h1 class="section-title main-title">George Mironovich </h1>
+                  <h3 class="section-subtitle">Front-end developer</h3>
+              </div>
+            </section>
+            <section class="section" id="contacts">
+                <h2 class="section-title">Contacts</h2>
+                <ul class="section-list">
+                    <li class="section-item">Minsk, Belarus</li>
+                    <li class="section-item">
+                        Email:
+                        <a class="section-link" href="mailto:mironovich0258@gmail.com" title="email">mironovich0258@gmail.com</a>
+                    </li>
+                    <li class="section-item">
+                        Github:
+                        <a class="section-link" href="https://github.com/valyahapka" title="github">ValyaHapka</a>
+                    </li>
+                    <li class="section-item">
+                        Telegram:
+                        <a class="section-link" href="https://t.me/ISIS_ROLE" title="telegram">@ISIS_ROLE</a>
+                    </li>
+                    <li class="section-item">
+                        Discord:
+                        <a class="section-link" href="https://discord.com/zUr7wWYPXE" title="discord">ValyaHapka#0952</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="section" id="summary">
+                <h2 class="section-title">Summary</h2>
+                <p>I am George</p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <ul class="section-list">
+                    <li class="section-item">
+                        Web-development:
+                        <span>HTML5, CSS3</span>
+                    </li>
+                    <li class="section-item">
+                        Version control:
+                        <span>GIT, Github</span>
+                    </li>
+                </ul>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code</h2>
+                <pre class="pre">
+                    <code> 
+function multiply(a, b) {
+return a * b
+} 
+                    </code>
+                </pre>
+            </section>
+            <section class="section" id="courses">
+                <h2 class="section-title">Courses</h2>
+                <p>The Rolling Scopes School <span> - JS / FRONT-END</span></p>
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section-title">Projects</h2>
+                <p>Soon...</p>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+                <p>Belarusian National Technical University</p>
+            </section>
+            <section class="section" id="english">
+                <h2 class="section-title">English</h2>
+                <p>A2-Pre-intermediate</p>
+            </section>  
+        </div>  
+    </main>
+    <footer class="footer">
+        <div class="container footer-container">
+            <div>
+                &copy; 2022
+                <a class="github-link" href="https://github.com/valyahapka">ValyaHapka</a>
+            </div>
+                <a class="rss" href="https://rs.school/js"></a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
+ 
