feat: adding info

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </section>
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
-                <p>I am George</p>
+                <p>My name is George. I'm 18. I'm starting to learn a Web-development. I want to join a team of like-minded people in the future.  My goal is to become a professional front-end developer</p>
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
